bingo-rabbitmq-qat/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bingo-rabbitmq
  namespace: bingo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bingo-rabbitmq
  template:
    metadata:
      labels:
        app: bingo-rabbitmq
    spec:
      containers:
      - name: bingo-rabbitmq
        image: 887270620532.dkr.ecr.ap-southeast-1.amazonaws.com/bingo-qat-rabbitmq:2.0  # Replace with your RabbitMQ Docker image name
        ports:
        - containerPort: 5671
        - containerPort: 5672
        - containerPort: 4369
        - containerPort: 25672
        - containerPort: 15671  # RabbitMQ management UI
        - containerPort: 15672
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/rabbitmq/lib
      volumes:
      - name: rabbitmq-data
        emptyDir: {}
